modify_metadata: a nested kind qualifies only for the produced types its owner declares
Restricting recognition to whole nested KINDS was still too coarse. A recalculation declares
record, manager and record-set types and nothing else, yet every suffix in the table qualified for
it, so a concrete RecalculationObject was refused with advice to drop the ref and use an abstract
form that does not exist. The test added in the same change asserts that spelling is unpublished,
so the refusal and the test contradicted each other, and the refusal was the one that was wrong.

Recognition now works on kind-and-suffix PAIRS, expressed as the produced-type feature names the
platform declares for each nested segment rather than as English spellings, so the catalogue
speaks the platform's vocabulary and a test asserts every feature it names exists in the suffix
table. Unrecognised pairs get exactly the message they got before nested recognition existed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>